--- a/src/JavaNet.Jvm/JavaNet.Jvm.csproj
+++ b/src/JavaNet.Jvm/JavaNet.Jvm.csproj
@@ -24,6 +24,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Mono.Cecil" Version="0.11.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
         <PrivateAssets>all</PrivateAssets>
     </PackageReference>
